// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableInlineList renders all onExpandToggle 1`] = `
<div
  className="__ExpandableInlineList__"
>
  <InlineList
    extractKey={[Function]}
    items={
      Immutable.List [
        1,
        2,
        3,
        4,
        5,
      ]
    }
    label={null}
    renderItem={[Function]}
    separateItems={true}
    suffix={null}
  />
  <Button
    className="toggle"
    ghost={false}
    loading={false}
    onClick={[Function]}
    prefixCls="ant-btn"
  >
    Hide
  </Button>
</div>
`;

exports[`ExpandableInlineList renders only 10 by default with expand toggle 1`] = `
<div
  className="__ExpandableInlineList__"
>
  <InlineList
    extractKey={[Function]}
    items={
      Immutable.List [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
      ]
    }
    label={null}
    renderItem={[Function]}
    separateItems={true}
    suffix={null}
  />
  <Button
    className="toggle"
    ghost={false}
    loading={false}
    onClick={[Function]}
    prefixCls="ant-btn"
  >
    Show all (11)
  </Button>
</div>
`;

exports[`ExpandableInlineList renders only limited amount with expand toggle 1`] = `
<div
  className="__ExpandableInlineList__"
>
  <InlineList
    extractKey={[Function]}
    items={
      Immutable.List [
        1,
        2,
        3,
      ]
    }
    label={null}
    renderItem={[Function]}
    separateItems={true}
    suffix={null}
  />
  <Button
    className="toggle"
    ghost={false}
    loading={false}
    onClick={[Function]}
    prefixCls="ant-btn"
  >
    Show all (5)
  </Button>
</div>
`;
